# django-starter-template

./: .env.sample  .gitignore  CODE_GUIDELINES.md  DEVELOPER.md  Dockerfile  MANIFEST.in  README.md  dev-requirements.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.sample  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.cursor/rules/: python-rules.mdc
api/: Dockerfile
api/accounts/: serializers.py  views.py
api/core/: celery.py  paginations.py  swagger.py  urls.py
api/core/settings/: base.py  celery.py  constants.py  globals.py  logging_config.py  middlewares.py  renders.py  rest.py  swagger.py
api/docker/: entrypoint.sh
api/utils/: constrants.py  exceptions.py
api/v1/sample/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/v1/sample/migrations/: 0001_initial.py
docker/: entrypoint.sh  logratate.conf
docker/mysql/etc/: my.cnf
docker/mysql/initdb.d/: 000-create-databases.sql  001-create-tables.sql
docker/nginx/: default.conf
docker/nginx/certs/: server.crt  server.key
mito/: schema.yml
mito/accounts/: models.py  views.py
mito/accounts/migrations/: 0001_initial.py
mito/auth/: urls.py
mito/core/: __init__.py  celery.py  paginations.py  swagger.py  urls.py
mito/core/settings/: base.py  celery.py  database.py  logging_config.py  middlewares.py  rest.py
mito/locale/zh_Hans/LC_MESSAGES/: django.po
mito/sample/management/: __init__.py
mito/sample/management/commands/: __init__.py  show_time.py
mito/v1/sample/: apps.py  tasks.py  urls.py  views.py
mito/v1/sample/management/commands/: show_time.py
tools/: project_manager.sh
ui/: package.json
ui/apps/web-antd/: vite.config.mts
ui/apps/web-antd/src/: preferences.ts
ui/apps/web-antd/src/api/core/: auth.ts  user.ts
ui/apps/web-antd/src/api/sample/: category.ts  index.ts  post.ts  tag.ts  types.ts
ui/apps/web-antd/src/layouts/: auth.vue
ui/apps/web-antd/src/router/routes/modules/: sample.ts
ui/apps/web-antd/src/store/: auth.ts
ui/apps/web-antd/src/views/_core/authentication/: login.vue
ui/apps/web-antd/src/views/sample/: index.vue
