[metadata]
name = mito
summary = Django starter template
author = Ray Sun
python_requires = >=3.10
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    api